<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.edu.uac.tallersegundocorte.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/btn_eliminarplato"
        style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/btn_nuevoplato"
        android:layout_marginRight="20dp"
        android:text="@string/eliminar_plato_men"
        tools:ignore="NewApi,RtlHardcoded" />

    <Button
        android:id="@+id/btn_consultarplato"
        style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btn_eliminarplato"
        android:layout_alignRight="@+id/btn_eliminarplato"
        android:layout_alignTop="@+id/btn_modificarplato"
        android:text="@string/consultar_plato_men"
        tools:ignore="NewApi" />

    <Button
        android:id="@+id/btn_modificarplato"
        style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_acerca"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/modificar_plato_men"
        tools:ignore="NewApi" />

    <Button
        android:id="@+id/btn_nuevoplato"
        style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_modificarplato"
        android:layout_alignLeft="@+id/btn_modificarplato"
        android:layout_alignStart="@+id/btn_modificarplato"
        android:layout_marginBottom="26dp"
        android:text="@string/nuevo_plato_men"
        tools:ignore="NewApi" />

    <Button
        android:id="@+id/btn_acerca"
        style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btn_consultarplato"
        android:layout_alignLeft="@+id/btn_modificarplato"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/btn_consultarplato"
        android:layout_alignStart="@+id/btn_modificarplato"
        android:layout_marginBottom="39dp"
        android:drawableLeft="@android:drawable/ic_menu_manage"
        android:text="@string/acerca_de"
        tools:ignore="NewApi,RtlHardcoded" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/food"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="68dp"
        android:layout_above="@+id/btn_eliminarplato"
        android:layout_marginBottom="31dp"
        android:contentDescription=""
        tools:ignore="ContentDescription" />

</RelativeLayout>
